[package]
name = "graphical-programming"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data handling
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.203" }
serde_derive = { version = "1.0.203" }
serde_json = { version = "1.0.117" }
chrono = { version = "0.4.38" }

# Tokio
tokio = { version = "1.38.0"}

# Webserver Stuff
axum = { version = "0.7.5" }
tower = { version = "0.4.13" }
